remove unuse resources
remove unuse resources